--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "模仿小红书的种草后端",
   "main": "index.js",
   "scripts": {
-    "start": "tsc & node dist/app.js",
+    "start": "nodemon --watch 'src/***/*' -e ts,tsx --exec 'ts-node' ./src/app.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,11 +20,17 @@
   "homepage": "https://github.com/liyuezu/social-push-node#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.22",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
-    "@types/node": "^11.13.0"
+    "@types/moment": "^2.13.0",
+    "@types/mongoose": "^5.3.24",
+    "@types/node": "^11.13.0",
+    "@types/uuid": "^3.4.4"
   }
 }
