--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.3.24",
     "@types/node": "^11.13.0",
-    "@types/uuid": "^3.4.4"
+    "@types/uuid": "^3.4.4",
+    "nodemon": "^1.18.10",
+    "ts-node": "^8.0.3"
   }
 }
