--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.22",
+    "typescript": "^3.4.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
