--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.22",
-    "typescript": "^3.4.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -34,6 +33,7 @@
     "@types/node": "^11.13.0",
     "@types/uuid": "^3.4.4",
     "nodemon": "^1.18.10",
-    "ts-node": "^8.0.3"
+    "ts-node": "^8.0.3",
+    "typescript": "^3.4.2"
   }
 }
