--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "模仿小红书的种草后端",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch 'src/***/*' -e ts,tsx --exec 'ts-node' ./src/app.ts",
+    "start": "nodemon --watch 'src/' -e ts,tsx --exec 'ts-node' ./src/app.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
