--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/liyuezu/social-push-node#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.22",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/crypto-js": "^3.1.43",
     "@types/express": "^4.16.1",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.3.24",
